--- a/style.css
+++ b/style.css
@@ -273,6 +273,7 @@ ul {
     position: relative;
     top: 198px;
     display: flex;
+    z-index: 1;
 }
 
 #formation_4>img {
@@ -357,7 +358,7 @@ ul {
     position: relative;
     top: 367px;
     /* right: -300px; */
-    /* width: 450px; */
+    /* width: 450px;  */
 }
 
 .missions_1,
@@ -592,7 +593,7 @@ nav>#git {
 .navigation {
     z-index: 1;
     position: fixed;
-    left: 1010px;
+    left: 100px;
     font-size: 17px;
     top: 20px;
     word-spacing: 30px;
@@ -976,7 +977,114 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
     }
 }
 
-
+/*responsive ecran 2560px */
+@media screen and (max-width: 2560px) {
+    .navigation {
+        z-index: 1;
+        position: fixed;
+        left: 2110px;
+        font-size: 17px;
+        top: 20px;
+        word-spacing: 30px;
+    }
+    .menu {
+        margin: 0 auto;
+        position: absolute;
+        top: 230px;
+        left: 1080px;
+        margin-left: -25px;
+        margin-top: -25px;
+        z-index: 1;
+    }
+    .menu_1_2 {
+        margin: 0 auto;
+        position: absolute;
+        top: 230px;
+        left: 1500px;
+        margin-left: -25px;
+        margin-top: -25px;
+        z-index: 1;
+    }
+    .info_5 {
+        display: flex;
+        padding: 10px;
+        text-align: right;
+        position: relative;
+        margin-bottom: 210px;
+        margin-left: 798px;
+    }
+    #experience_1 {
+        visibility: hidden;
+        width: 300px;
+        height: 158px;
+        text-align: center;
+        background-color: #ffffff2e;
+        position: relative;
+        left: 610px;
+        bottom: 10px;
+        z-index: 1;
+    }
+    .text_1_1 {
+        margin-bottom: 23px;
+        margin-left: 751px;
+    }
+    #cloud_1 {
+        position: absolute;
+        width: 1100px;
+        left: 1500px;
+    }
+    .line-cloud_1 {
+        top: 1240px;
+        height: 566px;
+    }
+    @keyframes cloud-move_2 {
+        0% {
+            transform: translate(2600px, 0);
+        }
+    
+        100% {
+            transform: translate(-1430px, 0);
+        }
+    }
+    @keyframes cloud-move_3 {
+        0% {
+            transform: translate(-80vw, 0);
+        }
+    
+        100% {
+            transform: translate(2600px, 0);
+        }
+    }
+    .line-cloud_1_2 {
+        top: 1600px;
+        height: 370px;
+    }
+    .line-cloud_1_3 {
+        top: 2000px;
+        height: 785px;
+    }
+    #cloud_6 {
+        position: absolute;
+        width: 900px;
+        height: 600px;
+        right: 1000px;
+    }
+    .txt_scroll_1 {
+        position: absolute;
+        width: 115px;
+        height: 53px;
+        margin-top: -30px;
+        margin-left: 42%;
+    }
+    .scroll_1 {
+        position: absolute;
+        width: 53px;
+        height: 53px;
+        margin-left: 40%;
+        margin-top: -20px;
+        transform: rotate(180deg);
+    }
+}
 /*responsive ecran 1440px */
 @media screen and (max-width: 1440px) {
     body {
@@ -1017,6 +1125,26 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         word-spacing: 30px;
     }
 
+    .menu {
+        margin: 0 auto;
+        position: absolute;
+        top: 230px;
+        left: 480px;
+        margin-left: -25px;
+        margin-top: -25px;
+        z-index: 1;
+    }
+
+    .menu_1_2 {
+        margin: 0 auto;
+        position: absolute;
+        top: 230px;
+        left: 975px;
+        margin-left: -25px;
+        margin-top: -25px;
+        z-index: 1;
+    }
+
     #parcours {
         margin-left: 895px;
         font-size: 20px;
@@ -1040,8 +1168,25 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         padding: 10px;
         text-align: right;
         position: relative;
-        left: 700px;
+        left: 120px;
         margin-bottom: 210px;
+    }
+
+    #experience_1 {
+        visibility: hidden;
+        width: 300px;
+        height: 158px;
+        text-align: center;
+        background-color: #ffffff2e;
+        position: relative;
+        left: 0px;
+        bottom: 10px;
+        z-index: 1;
+    }
+
+    .text_1_1 {
+        margin-bottom: 23px;
+        margin-left: 151px;
     }
 
     .scroll_1 {
@@ -1100,16 +1245,14 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         overflow-x: hidden;
     }
 
-
     .info_5 {
         display: flex;
         padding: 10px;
         text-align: right;
         position: relative;
-        left: 495px;
+        left: -214px;
         margin-bottom: 210px;
     }
-
 
     .navigation {
         z-index: 1;
@@ -1165,6 +1308,12 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         top: 367px;
         /* right: -300px; */
         /* width: 450px; */
+    }
+
+    .text_5 {
+        text-align: right;
+        z-index: 1;
+        width: 300px;
     }
 
     .text_4 {
@@ -1241,6 +1390,19 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         position: relative;
         margin-bottom: 210px;
         margin-left: 490px;
+        z-index: 1;
+    }
+
+    #experience_1 {
+        visibility: hidden;
+        width: 300px;
+        height: 158px;
+        text-align: center;
+        background-color: #ffffff2e;
+        position: relative;
+        left: 40px;
+        bottom: 10px;
+        z-index: 1;
     }
 
     #home {
@@ -1525,7 +1687,7 @@ input#toggle_2:checked~#show-menu_2 .btn_2 .closeBtn_2 {
         text-align: right;
         position: relative;
         margin-bottom: 0px;
-        left: 263px;
+        left: -445px;
     }
 
     #row_1 {
